--- a/index-cn.html
+++ b/index-cn.html
@@ -31,6 +31,11 @@
 		href='https://fonts.googleapis.com/css?family=Cormorant%3A300%2C400%2C500%2C500i%2C600%2C700%7CWork+Sans%3A300%2C400%2C500%2C500i%2C600%2C700%7CRaleway%3A300%2C400%2C500%2C500i%2C600%2C700&#038;subset=latin-ext&#038;ver=1.0.0'
 		type='text/css' media='all' />
 	<style id='borgholm-style-inline-css' type='text/css'>
+		#logo-img {
+			width: 100% !important;
+			height: auto !important;
+		}
+
 		@font-face {
 			font-family: ElegantIcons;
 			src: ur('assets/fonts/ElegantIcons.woff') format('truetype');
@@ -409,6 +414,7 @@
 																							data-frame_1="e:power2.inOut;st:800;sp:1000;"
 																							data-frame_999="o:0;st:w;sR:1700;"
 																							style="z-index:9;"><img
+																								id="logo-img"
 																								loading="lazy"
 																								src="assets/img/h11-rev-img-2.png"
 																								alt="a" width="480"
