--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
 		.wp-block-themepunch-revslider {
 			background-color: #060606;
 		}
+
+		#logo-img {
+			width: 100% !important;
+			height: auto !important;
+		}
 	</style>
 	<link rel="stylesheet" href="assets/css/7b1e8.css" media="all" />
 	<link rel='stylesheet' id='google-fonts-1-css'
@@ -419,6 +424,7 @@
 																							data-frame_1="e:power2.inOut;st:800;sp:1000;"
 																							data-frame_999="o:0;st:w;sR:1700;"
 																							style="z-index:9;"><img
+																								id="logo-img"
 																								loading="lazy"
 																								src="assets/img/h11-rev-img-2.png"
 																								alt="a" width="500"
