--- a/index-cn.html
+++ b/index-cn.html
@@ -548,7 +548,6 @@
 																							data-frame_1="sp:1000;st:a;"
 																							data-frame_999="sX:0.9;sY:0.9;o:0;st:310;sp:1000;"
 																							style="z-index:19;font-family:Work Sans;">
-																							SEAT RAILS
 																						</rs-layer>
 																						<rs-layer
 																							id="slider-10-slide-10-layer-15"
@@ -564,7 +563,6 @@
 																							data-frame_1="x:11px;y:1px;st:a;sp:1000;"
 																							data-frame_999="sX:0.9;sY:0.9;o:0;st:w;sp:1000;"
 																							style="z-index:18;font-family:Work Sans;">
-																							HANDLE BARS
 																						</rs-layer>
 																						<rs-layer
 																							id="slider-10-slide-10-layer-16"
@@ -580,7 +578,6 @@
 																							data-frame_1="st:a;sp:1000;"
 																							data-frame_999="sX:0.9;sY:0.9;o:0;st:w;sp:1000;"
 																							style="z-index:17;font-family:Work Sans;">
-																							CRANKSET
 																						</rs-layer>
 																						<rs-layer
 																							id="slider-10-slide-10-layer-18"
@@ -617,7 +614,6 @@
 																							data-frame_1="x:11px;y:1px;st:a;sp:1000;"
 																							data-frame_999="sX:0.9;sY:0.9;o:0;st:w;sp:1000;"
 																							style="z-index:21;font-family:Work Sans;">
-																							SECONDARY LOCK
 																						</rs-layer>
 																					</rs-static-layers>
 																				</rs-module>
@@ -819,27 +815,14 @@
 
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">
-																				关于悦倍 <br> About Us
+																				关于悦倍
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 																				悦倍商务咨询(上海)有限公司总部位于上海，拥有为大中华区跨
 																				国及民营企业提供猎头及人力资源管理咨询服务超过20年经验的顾
 																				问团队，致力于为中国外资及本土企业提供猎头服务，高管教练，
-																				管理培训，人力资源管理咨询及外资企业市场准入等服务。 <br><br><span
-																					style="font-weight: bolder;">
-																					Headquartered in Shanghai, China,
-																					Yuebei
-																					Business Consulting boasts of a
-																					professional team of experienced
-																					consultants with over 20 years of
-																					servicing clients in Greater China
-																					and
-																					is specialized in the provision of
-																					Executive Search, Executive Coach,
-																					Management Training, HR Consulting
-																					and
-																					FIE Market Entry Services.</span>
+																				管理培训，人力资源管理咨询及外资企业市场准入等服务。
 																			</div>
 
 
@@ -872,7 +855,7 @@
 																			class="qodef-shortcode qodef-m  qodef-section-title qodef-alignment--center   ">
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">
-																				悦倍专长 / Our Expertise
+																				悦倍专长
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a; font-weight: bolder;">
@@ -917,10 +900,7 @@
 																											<span
 																												class="qodef-m-title-text">猎头服务</span>
 																										</h5>
-																										<p class="qodef-m-text"
-																											style="color: #FFFFFF">
-																											Executive
-																											Search</p>
+
 																									</div>
 																								</div>
 																							</div>
@@ -958,10 +938,7 @@
 																											<span
 																												class="qodef-m-title-text">高管教练</span>
 																										</h5>
-																										<p class="qodef-m-text"
-																											style="color: #FFFFFF">
-																											Executive
-																											Coach</p>
+
 																									</div>
 																								</div>
 																							</div>
@@ -999,10 +976,7 @@
 																											<span
 																												class="qodef-m-title-text">管理培训</span>
 																										</h5>
-																										<p class="qodef-m-text"
-																											style="color: #FFFFFF">
-																											Management
-																											Training</p>
+
 																									</div>
 																								</div>
 																							</div>
@@ -1041,11 +1015,7 @@
 																											<span
 																												class="qodef-m-title-text">HR咨询</span>
 																										</h5>
-																										<p class="qodef-m-text"
-																											style="color: #FFFFFF">
-																											HR
-																											Consulting
-																										</p>
+
 																									</div>
 																								</div>
 																							</div>
@@ -1083,10 +1053,6 @@
 																											<span
 																												class="qodef-m-title-text">市场准入</span>
 																										</h5>
-																										<p class="qodef-m-text"
-																											style="color: #FFFFFF">
-																											FIE Market
-																											Entry </p>
 																									</div>
 																								</div>
 																							</div>
@@ -1144,7 +1110,7 @@
 
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">
-																				猎头服务 <br> Executive Search
+																				猎头服务
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a;">
@@ -1157,35 +1123,14 @@
 																				style="margin-top: 17px;color: #FFFFFF">
 																				悦倍商务咨询拥有强大的各相关行业顶尖候选人数据库，具备专业的
 																				候选人寻访技巧且经验丰富的猎头顾问团队,以及严谨的候选人面试与 评估流程。
-																				<br><br>
-																				<span
-																					style="font-weight: bolder;">YUEBEI
-																					Business Consulting possesses a
-																					large number of high caliber
-																					candidates
-																					database from related industries and
-																					prides itself with a seasoned team
-																					of
-																					experienced headhunting consultants
-																					equipped with professional
-																					headhunting
-																					skills and rigid interview and
-																					assessment processes.</span></div>
+																			</div>
 
 
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 																				悦倍商务咨询的猎头顾问团队专注于服务的企业主要来自国内外IT，
 																				半导体，酒店，教育，大健康及奢侈品行业等。
-																				<br><br>
-																				<span style="font-weight: bolder;">
-																					YUEBEI Business Consulting focuses
-																					on
-																					servicing industry clients from IT,
-																					Semi-conductor, Hospitality,
-																					Education,
-																					Health Management and Luxury
-																					etc.</span>
+
 																			</div>
 
 
@@ -1218,18 +1163,13 @@
 																			class="qodef-shortcode qodef-m  qodef-section-title qodef-alignment--center   ">
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">
-																				立足中国，着眼全球 <br> Global Reach
+																				立足中国，着眼全球
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 30px;color: #FFFFFF">
 																				我们利用全球猎头网络帮助中国企业扬帆海外。
 
-																				<br><br><span
-																					style="font-weight: bolder;">
-																					WE HELP CHINESE COMPANIES TO GO
-																					GLOBAL
-																					WITH OUR INTERNATIONAL
-																					NETWORKS.</span>
+
 																			</div>
 																		</div>
 																	</div>
@@ -1264,7 +1204,7 @@
 
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">
-																				高管教练 <br> Executive Coach
+																				高管教练
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a;">
@@ -1277,23 +1217,7 @@
 																				悦倍商务咨询拥有国际教练联合会(ICF)认证的企业高管及全面生活教
 																				练，具备丰富的企业及个人教练经验，可为企业及个人提供定制化的教
 																				练服务，帮助受职场及生活问题困扰的人们发现潜能，突破职业及生活
-																				困境，拥有更圆满，更精彩的人生。 <br><br>
-																				<span style="font-weight: bolder;">With
-																					ICF certified holistic
-																					executive
-																					and life coaches, YUEBEI Business
-																					Consulting is able to provide
-																					tailor-made coaching service for
-																					both
-																					corporates and individuals, helping
-																					people suffering from career and
-																					life
-																					problems unlock potential and make
-																					career and life breakthrough so as
-																					to
-																					embrace a more fulfilling and
-																					colorful
-																					life.</span></div>
+																				困境，拥有更圆满，更精彩的人生。 </div>
 
 
 																		</div>
@@ -1365,7 +1289,7 @@
 
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">
-																				管理培训 <br> Management Training
+																				管理培训
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a;">
@@ -1376,24 +1300,11 @@
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 																				悦倍商务咨询能够为企业中高层提供各类管理及职能培训，帮助企业提高员工技能，提升团队士气，取得更好的绩效表现。
-																				<br><br>
-																				<span
-																					style="font-weight: bolder;">YUEBEI
-																					Business Consulting provides
-																					management and functional trainings
-																					to the corporate managers and
-																					executives so as to improve employee
-																					skills and team morale for better
-																					performance.</span></div>
+																			</div>
 
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 30px;color: #FFFFFF">
-																				悦倍商务咨询品牌课程包括:
-
-																				<br>
-																				<span
-																					style="font-weight: bolder;">YUEBEI
-																					Signature Courses:</span></div>
+																				悦倍商务咨询品牌课程包括:</div>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #FFFFFF">
 																				高效人士的七个习惯|制胜领导力|企业文化锻造|培训师认证|高效执行力|
@@ -1429,7 +1340,7 @@
 																			class="qodef-shortcode qodef-m  qodef-section-title qodef-alignment--center   ">
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">
-																				HR咨询 <br> HR Consulting
+																				HR咨询
 																			</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a;">
@@ -1444,16 +1355,7 @@
 																				凭借在国际
 																				品牌优化及招聘效能提升等。
 
-																				<br><br><span
-																					style="font-weight: bolder;">
-																					YUEBEI’s HR Consulting services
-																					include Setting Up HR System from
-																					scratch, Establishment of HR P&P,
-																					Talent Development Strategy, HR
-																					Diagnostic, Organization Structure
-																					Change, Employer Branding
-																					Optimization and Recruitment
-																					Efficiency Enhancement etc.</span>
+
 																			</div>
 																		</div>
 																	</div>
@@ -1486,7 +1388,7 @@
 																			class="qodef-shortcode qodef-m  qodef-section-title qodef-alignment--left   ">
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">
-																				市场准入<br>Market Entry</h1>
+																				市场准入</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a; font-weight: bolder;">
 																				We help connect the world with china.
@@ -1495,24 +1397,11 @@
 																				style="margin-top: 17px;color: #FFFFFF">
 																				悦倍商务咨询的市场准入业务旨在为外资企业进入中国市场提供各种支持服
 																				务，帮助外资企业快速落地中国市场，迅速开展业务，占得先机。
-																				<br><br>
-																				<span
-																					style="font-weight: bolder;">YUEBEI
-																					Business Consulting provides market
-																					entry services to FIEs with
-																					凭借在国际
-																					ambition to develop in Chinese
-																					market, and helps them settle down
-																					quickly and start to roar in China
-																					ASAP.</span></div>
+																				</div>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 48px;color: #e98b3a">
 																				悦倍商务咨询的市场准入服务主要包括:
-																				<br>
-																				<span
-																					style="font-weight: bolder;">YUEBEI
-																					Market Entry Services
-																					include:</span></div>
+																				</div>
 																		</div>
 																	</div>
 																</div>
@@ -1525,28 +1414,22 @@
 																			<p
 																				style="color: #ffffff; font-size: 18px; font-family: Cormorant; line-height: 27px; font-weight: bolder;">
 																				&#8211; 外资企业公司设立
-																				<br>&nbsp;&nbsp; Establishment of WOFE
-																				and JV
+
 																			</p>
 																			<p
 																				style="color: #ffffff; font-size: 18px; font-family: Cormorant; line-height: 27px; font-weight: bolder;">
 																				&#8211;市场调研
-																				<br>&nbsp;&nbsp;
-																				Market Research</p>
+</p>
 																			<p
 																				style="color: #ffffff; font-size: 18px; font-family: Cormorant; line-height: 27px; font-weight: bolder;">
-																				&#8211; 竞争对手分析<br>
-																				&nbsp;&nbsp; Competitor Analysis</p>
+																				&#8211; 竞争对手分析</p>
 																			<p
 																				style="color: #ffffff; font-size: 18px; font-family: Cormorant; line-height: 27px; font-weight: bolder;">
-																				&#8211; 人才招聘及人事管理<br>
-																				&nbsp;&nbsp; Recruitment and HR
-																				Management</p>
+																				&#8211; 人才招聘及人事管理</p>
 																			<p
 																				style="color: #ffffff; font-size: 18px; font-family: Cormorant; line-height: 27px; font-weight: bolder;">
 																				&#8211; 渠道及运营管理咨询<br>
-																				&nbsp;&nbsp; Sales and Operation
-																				Consulting</p>
+																				</p>
 																		</div>
 																	</div>
 																</div>
@@ -1614,7 +1497,7 @@
 																			class="qodef-shortcode qodef-m  qodef-section-title qodef-alignment--left   ">
 																			<h1 class="qodef-m-title"
 																				style="color: #FFFFFF">
-																				悦倍优势<br>Why YUEBEI</h1>
+																				悦倍优势</h1>
 																			<div class="qodef-m-subtitle"
 																				style="margin-top: 17px;color: #e98b3a">
 																				We commit to be your trusted partner
@@ -1630,22 +1513,18 @@
 																			class="elementor-text-editor elementor-clearfix">
 																			<p
 																				style="color: #ffffff; font-size: 18px; font-family: Cormorant; line-height: 27px; font-weight: bold;">
-																				&#8211; Integrity Is Foremost to us
-																				<br>&nbsp;&nbsp; 正直诚信是我们的基石
+																				&#8211; 正直诚信是我们的基石
 																			</p>
 																			<p
 																				style="color: #ffffff; font-size: 18px; font-family: Cormorant; line-height: 27px; font-weight: bold;">
-																				&#8211; Highly Professional
-																				<br>&nbsp;&nbsp;
+																				&#8211; 
 																				高度专业</p>
 																			<p
 																				style="color: #ffffff; font-size: 18px; font-family: Cormorant; line-height: 27px; font-weight: bold;">
-																				&#8211; Quality and Result Driven<br>
-																				&nbsp;&nbsp; 质量与结果并重</p>
+																				&#8211; 质量与结果并重</p>
 																			<p
 																				style="color: #ffffff; font-size: 18px; font-family: Cormorant; line-height: 27px; font-weight: bold;">
-																				&#8211; Global Network<br>
-																				&nbsp;&nbsp; 全球网络</p>
+																				&#8211; 全球网络</p>
 																		</div>
 																	</div>
 																</div>
